5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4014/executions/1756_1576.log
== SUBMITION (2019-05-29 10:38:59) 
-- CODE:
from numpy import*
var1=array(eval(input("sequencia de jogadas eusapia: ")))
var2=array(eval(input("jogadas correspondentes de barsanulfo: ")))
i=0
e=0
b=0
while(i < size(v1)):
	if(v1[i] == 22 and v2[i] == 11 or v1[i] == 11 and v2[i] == 33
		or v1[i] == 33 and v2[1] == 22):
		e = e + 1
	elif(v2[i] == 22 and v1[i] == 11 or v2[i] == 11 and v1[i] == 33
		or v2[i] == 33 and v1[i] == 22):
		 b = b + 1
		 
-- EXECUTION TIME:
0.549207
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1576/main.py", line 7, in <module>
    while(i < size(v1)):
NameError: name 'v1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:39:00) 
-- CODE:
from numpy import*
var1=array(eval(input("sequencia de jogadas eusapia: ")))
var2=array(eval(input("jogadas correspondentes de barsanulfo: ")))
i=0
e=0
b=0
while(i < size(v1)):
	if(v1[i] == 22 and v2[i] == 11 or v1[i] == 11 and v2[i] == 33
		or v1[i] == 33 and v2[1] == 22):
		e = e + 1
	elif(v2[i] == 22 and v1[i] == 11 or v2[i] == 11 and v1[i] == 33
		or v2[i] == 33 and v1[i] == 22):
		 b = b + 1
		 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:41:44) 
-- CODE:
from numpy import*
v1 = array(eval(input("sequencia de jogadas eusapia = ")))
v2 = array(eval(input("jogadas correspondentes de barsanulfo = ")))
i=0
e=0
b=0
while(i < size(v1)):
	if(v1[i] == 22 and v2[i] == 11 or v1[i] == 11 and v2[i] == 33
		or v1[i] == 33 and v2[1] == 22):
		e = e + 1
	elif(v2[i] == 22 and v1[i] == 11 or v2[i] == 11 and v1[i] == 33
		or v2[i] == 33 and v1[i] == 22):
		 b = b + 1
		 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:48:39) 
-- CODE:
from numpy import*

v1 = array(eval(input("sequencia de jogadas eusapia = ")))
v2 = array(eval(input("jogadas correspondentes de barsanulfo = ")))

i=0
e=0
b=0

while(i < size(v1)):
	if(v1[i] == 22 and v2[i] == 11 or v1[i] == 11 and v2[i] == 33
		or v1[i] == 33 and v2[1] == 22):
		e = e + 1
	elif(v2[i] == 22 and v1[i] == 11 or v2[i] == 11 and v1[i] == 33
		or v2[i] == 33 and v1[i] == 22):
		 b = b + 1
		 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 10:48:39) 
-- CODE:
from numpy import*
v1 = array(eval(input("sequencia de jogadas eusapia = ")))
v2 = array(eval(input("jogadas correspondentes de barsanulfo = ")))
i=0
e=0
b=0
while(i < size(v1)):
	if(v1[i] == 22 and v2[i] == 11 or v1[i] == 11 and v2[i] == 33
		or v1[i] == 33 and v2[1] == 22):
		e = e + 1
	elif(v2[i] == 22 and v1[i] == 11 or v2[i] == 11 and v1[i] == 33
		or v2[i] == 33 and v1[i] == 22):
		 b = b + 1
		 
-- EXECUTION TIME:
414.204
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:

-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 10:48:40) 
-- CODE:
from numpy import*
v1 = array(eval(input("sequencia de jogadas eusapia = ")))
v2 = array(eval(input("jogadas correspondentes de barsanulfo = ")))
i=0
e=0
b=0
while(i < size(v1)):
	if(v1[i] == 22 and v2[i] == 11 or v1[i] == 11 and v2[i] == 33
		or v1[i] == 33 and v2[1] == 22):
		e = e + 1
	elif(v2[i] == 22 and v1[i] == 11 or v2[i] == 11 and v1[i] == 33
		or v2[i] == 33 and v1[i] == 22):
		 b = b + 1
		 
-- EXECUTION TIME:
412.727
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:

-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 10:48:40) 
-- CODE:
from numpy import*
v1 = array(eval(input("sequencia de jogadas eusapia = ")))
v2 = array(eval(input("jogadas correspondentes de barsanulfo = ")))
i=0
e=0
b=0
while(i < size(v1)):
	if(v1[i] == 22 and v2[i] == 11 or v1[i] == 11 and v2[i] == 33
		or v1[i] == 33 and v2[1] == 22):
		e = e + 1
	elif(v2[i] == 22 and v1[i] == 11 or v2[i] == 11 and v1[i] == 33
		or v2[i] == 33 and v1[i] == 22):
		 b = b + 1
		 
-- EXECUTION TIME:
412.238
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:

-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 10:48:40) 
-- CODE:
from numpy import*
v1 = array(eval(input("sequencia de jogadas eusapia = ")))
v2 = array(eval(input("jogadas correspondentes de barsanulfo = ")))
i=0
e=0
b=0
while(i < size(v1)):
	if(v1[i] == 22 and v2[i] == 11 or v1[i] == 11 and v2[i] == 33
		or v1[i] == 33 and v2[1] == 22):
		e = e + 1
	elif(v2[i] == 22 and v1[i] == 11 or v2[i] == 11 and v1[i] == 33
		or v2[i] == 33 and v1[i] == 22):
		 b = b + 1
		 
-- EXECUTION TIME:
412.52
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:

-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
task 327624f773fac6d4bb6823d31b6c88706cc25f5a203049d7dfc8365ac4502385 not found: not found
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 10:48:40) 
-- CODE:
from numpy import*
v1 = array(eval(input("sequencia de jogadas eusapia = ")))
v2 = array(eval(input("jogadas correspondentes de barsanulfo = ")))
i=0
e=0
b=0
while(i < size(v1)):
	if(v1[i] == 22 and v2[i] == 11 or v1[i] == 11 and v2[i] == 33
		or v1[i] == 33 and v2[1] == 22):
		e = e + 1
	elif(v2[i] == 22 and v1[i] == 11 or v2[i] == 11 and v1[i] == 33
		or v2[i] == 33 and v1[i] == 22):
		 b = b + 1
		 
-- EXECUTION TIME:
411.862
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:

-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:

-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 10:48:40) 
-- CODE:
from numpy import*

v1 = array(eval(input("sequencia de jogadas eusapia = ")))
v2 = array(eval(input("jogadas correspondentes de barsanulfo = ")))

i=0
e=0
b=0

while(i < size(v1)):
	if(v1[i] == 22 and v2[i] == 11 or v1[i] == 11 and v2[i] == 33
		or v1[i] == 33 and v2[1] == 22):
		e = e + 1
	elif(v2[i] == 22 and v1[i] == 11 or v2[i] == 11 and v1[i] == 33
		or v2[i] == 33 and v1[i] == 22):
		 b = b + 1
		 
-- EXECUTION TIME:
398.58
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:

-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:

-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:49:36) 
-- CODE:
from numpy import*

v1 = array(eval(input("sequencia de jogadas eusapia = ")))
v2 = array(eval(input("jogadas correspondentes de barsanulfo = ")))

i=0
e=0
b=0

while(i < size(v1)):
	if(v1[i] == 22 and v2[i] == 11 or v1[i] == 11 and v2[i] == 33
		or v1[i] == 33 and v2[1] == 22):
		e = e + 1
	elif(v2[i] == 22 and v1[i] == 11 or v2[i] == 11 and v1[i] == 33
		or v2[i] == 33 and v1[i] == 22):
		 b = b + 1
		 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:49:40) 
-- CODE:
from numpy import*

v1 = array(eval(input("sequencia de jogadas eusapia = ")))
v2 = array(eval(input("jogadas correspondentes de barsanulfo = ")))

i=0
e=0
b=0

while(i < size(v1)):
	if(v1[i] == 22 and v2[i] == 11 or v1[i] == 11 and v2[i] == 33
		or v1[i] == 33 and v2[1] == 22):
		e = e + 1
	elif(v2[i] == 22 and v1[i] == 11 or v2[i] == 11 and v1[i] == 33
		or v2[i] == 33 and v1[i] == 22):
		 b = b + 1
		 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 10:55:01) 
-- CODE:
from numpy import*

v1 = array(eval(input("sequencia de jogadas eusapia = ")))
v2 = array(eval(input("jogadas correspondentes de barsanulfo = ")))

i=0
e=0
b=0

while(i < size(v1)):
	if(v1[i] == 22 and v2[i] == 11 or v1[i] == 11 and v2[i] == 33
		or v1[i] == 33 and v2[1] == 22):
		e = e + 1
	elif(v2[i] == 22 and v1[i] == 11 or v2[i] == 11 and v1[i] == 33
		or v2[i] == 33 and v1[i] == 22):
		 b = b + 1
		 
-- EXECUTION TIME:
322.4
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:

-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 11:41:14) 
-- CODE:
from numpy import*
j1 = array(eval(input("p1 sequencia de jogadas na eusapia: ")))
j2 = array(eval(input("p2 seuquencia de jogadas de barsanulfo:")))

pont1 = 0
pont2 = 0

i = 0
while(i < size(j1)):
	 if(j1[i] == 11): #pedra
		if(j2[i == 2]):#papel
			pont2 += 1
			elif(j2[i] == 33):
				tesoura
				pont1 += 1
	if(j1[i == 22]): #papel
		if(j2[i] == 22):#pedra
			pont1 += 1
		elif(j2[i] == 33):# tesoura
			pont2 += 1
	if(j1[i] == 33): #tesoura
		if(j2[i] == 11): #pedra
			pont2 += 1
		elif(j2[i] == 22): #papel
			pont1 += 1
		i += 1
		
print(size(j1))
if (pont1 > pont2):
	print("EUSAPIA")
if(pont1 < pont2):
	print("BARSANULFO")
IF(pont1 == pont2):
	print("EMPATE")
	 		



-- ERROR:
File "XXXX", line 11
    if(j2[i == 2]):#papel
                        ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 11:41:17) 
-- CODE:
from numpy import*
j1 = array(eval(input("p1 sequencia de jogadas na eusapia: ")))
j2 = array(eval(input("p2 seuquencia de jogadas de barsanulfo:")))

pont1 = 0
pont2 = 0

i = 0
while(i < size(j1)):
	 if(j1[i] == 11): #pedra
		if(j2[i == 2]):#papel
			pont2 += 1
			elif(j2[i] == 33):
				tesoura
				pont1 += 1
	if(j1[i == 22]): #papel
		if(j2[i] == 22):#pedra
			pont1 += 1
		elif(j2[i] == 33):# tesoura
			pont2 += 1
	if(j1[i] == 33): #tesoura
		if(j2[i] == 11): #pedra
			pont2 += 1
		elif(j2[i] == 22): #papel
			pont1 += 1
		i += 1
		
print(size(j1))
if (pont1 > pont2):
	print("EUSAPIA")
if(pont1 < pont2):
	print("BARSANULFO")
IF(pont1 == pont2):
	print("EMPATE")
	 		



-- EXECUTION TIME:
0.187264
-- ERROR:
  File "/home/codebench/codes/1756/1576/main.py", line 11
    if(j2[i == 2]):#papel
                        ^
TabError: inconsistent use of tabs and spaces in indentation

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 11:41:19) 
-- CODE:
from numpy import*
j1 = array(eval(input("p1 sequencia de jogadas na eusapia: ")))
j2 = array(eval(input("p2 seuquencia de jogadas de barsanulfo:")))

pont1 = 0
pont2 = 0

i = 0
while(i < size(j1)):
	 if(j1[i] == 11): #pedra
		if(j2[i == 2]):#papel
			pont2 += 1
			elif(j2[i] == 33):
				tesoura
				pont1 += 1
	if(j1[i == 22]): #papel
		if(j2[i] == 22):#pedra
			pont1 += 1
		elif(j2[i] == 33):# tesoura
			pont2 += 1
	if(j1[i] == 33): #tesoura
		if(j2[i] == 11): #pedra
			pont2 += 1
		elif(j2[i] == 22): #papel
			pont1 += 1
		i += 1
		
print(size(j1))
if (pont1 > pont2):
	print("EUSAPIA")
if(pont1 < pont2):
	print("BARSANULFO")
IF(pont1 == pont2):
	print("EMPATE")
	 		



-- EXECUTION TIME:
0.213318
-- ERROR:
  File "/home/codebench/codes/1756/1576/main.py", line 11
    if(j2[i == 2]):#papel
                        ^
TabError: inconsistent use of tabs and spaces in indentation

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 11:41:19) 
-- CODE:
from numpy import*
j1 = array(eval(input("p1 sequencia de jogadas na eusapia: ")))
j2 = array(eval(input("p2 seuquencia de jogadas de barsanulfo:")))

pont1 = 0
pont2 = 0

i = 0
while(i < size(j1)):
	 if(j1[i] == 11): #pedra
		if(j2[i == 2]):#papel
			pont2 += 1
			elif(j2[i] == 33):
				tesoura
				pont1 += 1
	if(j1[i == 22]): #papel
		if(j2[i] == 22):#pedra
			pont1 += 1
		elif(j2[i] == 33):# tesoura
			pont2 += 1
	if(j1[i] == 33): #tesoura
		if(j2[i] == 11): #pedra
			pont2 += 1
		elif(j2[i] == 22): #papel
			pont1 += 1
		i += 1
		
print(size(j1))
if (pont1 > pont2):
	print("EUSAPIA")
if(pont1 < pont2):
	print("BARSANULFO")
IF(pont1 == pont2):
	print("EMPATE")
	 		



-- ERROR:
File "XXXX", line 11
    if(j2[i == 2]):#papel
                        ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 11:43:12) 
-- CODE:
from numpy import*
j1 = array(eval(input("p1 sequencia de jogadas na eusapia: ")))
j2 = array(eval(input("p2 seuquencia de jogadas de barsanulfo:")))

pont1 = 0
pont2 = 0

i = 0
while(i < size(j1)):
	if (j1[i] == 11): #pedra
		if (j2[i == 2]):#papel
			pont2 += 1
			elif(j2[i] == 33):
				tesoura
				pont1 += 1
	if(j1[i == 22]): #papel
		if (j2[i] == 22):#pedra
			pont1 += 1
		elif(j2[i] == 33):# tesoura
			pont2 += 1
	if(j1[i] == 33): #tesoura
		if (j2[i] == 11): #pedra
			pont2 += 1
		elif(j2[i] == 22): #papel
			pont1 += 1
		i += 1
		
print(size(j1))
if (pont1 > pont2):
	print("EUSAPIA")
if(pont1 < pont2):
	print("BARSANULFO")
IF(pont1 == pont2):
	print("EMPATE")
	 		



-- EXECUTION TIME:
0.152839
-- ERROR:
  File "/home/codebench/codes/1756/1576/main.py", line 13
    elif(j2[i] == 33):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 11:43:13) 
-- CODE:
from numpy import*
j1 = array(eval(input("p1 sequencia de jogadas na eusapia: ")))
j2 = array(eval(input("p2 seuquencia de jogadas de barsanulfo:")))

pont1 = 0
pont2 = 0

i = 0
while(i < size(j1)):
	if (j1[i] == 11): #pedra
		if (j2[i == 2]):#papel
			pont2 += 1
			elif(j2[i] == 33):
				tesoura
				pont1 += 1
	if(j1[i == 22]): #papel
		if (j2[i] == 22):#pedra
			pont1 += 1
		elif(j2[i] == 33):# tesoura
			pont2 += 1
	if(j1[i] == 33): #tesoura
		if (j2[i] == 11): #pedra
			pont2 += 1
		elif(j2[i] == 22): #papel
			pont1 += 1
		i += 1
		
print(size(j1))
if (pont1 > pont2):
	print("EUSAPIA")
if(pont1 < pont2):
	print("BARSANULFO")
IF(pont1 == pont2):
	print("EMPATE")
	 		



-- ERROR:
File "XXXX", line 13
    elif(j2[i] == 33):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 11:43:27) 
-- CODE:
from numpy import*
j1 = array(eval(input("p1 sequencia de jogadas na eusapia: ")))
j2 = array(eval(input("p2 seuquencia de jogadas de barsanulfo:")))

pont1 = 0
pont2 = 0

i = 0
while(i < size(j1)):
	if (j1[i] == 11): #pedra
		if (j2[i == 2]):#papel
			pont2 += 1
		elif(j2[i] == 33):
				tesoura
				pont1 += 1
	if(j1[i == 22]): #papel
		if (j2[i] == 22):#pedra
			pont1 += 1
		elif(j2[i] == 33):# tesoura
			pont2 += 1
	if(j1[i] == 33): #tesoura
		if (j2[i] == 11): #pedra
			pont2 += 1
		elif(j2[i] == 22): #papel
			pont1 += 1
		i += 1
		
print(size(j1))
if (pont1 > pont2):
	print("EUSAPIA")
if(pont1 < pont2):
	print("BARSANULFO")
IF(pont1 == pont2):
	print("EMPATE")
	 		



-- EXECUTION TIME:
0.187157
-- ERROR:
  File "/home/codebench/codes/1756/1576/main.py", line 33
    IF(pont1 == pont2):
                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 11:43:28) 
-- CODE:
from numpy import*
j1 = array(eval(input("p1 sequencia de jogadas na eusapia: ")))
j2 = array(eval(input("p2 seuquencia de jogadas de barsanulfo:")))

pont1 = 0
pont2 = 0

i = 0
while(i < size(j1)):
	if (j1[i] == 11): #pedra
		if (j2[i == 2]):#papel
			pont2 += 1
		elif(j2[i] == 33):
				tesoura
				pont1 += 1
	if(j1[i == 22]): #papel
		if (j2[i] == 22):#pedra
			pont1 += 1
		elif(j2[i] == 33):# tesoura
			pont2 += 1
	if(j1[i] == 33): #tesoura
		if (j2[i] == 11): #pedra
			pont2 += 1
		elif(j2[i] == 22): #papel
			pont1 += 1
		i += 1
		
print(size(j1))
if (pont1 > pont2):
	print("EUSAPIA")
if(pont1 < pont2):
	print("BARSANULFO")
IF(pont1 == pont2):
	print("EMPATE")
	 		



-- ERROR:
File "XXXX", line 33
    IF(pont1 == pont2):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 11:44:19) 
-- CODE:
from numpy import*
j1 = array(eval(input("p1 sequencia de jogadas na eusapia: ")))
j2 = array(eval(input("p2 seuquencia de jogadas de barsanulfo:")))

pont1 = 0
pont2 = 0

i = 0
while(i < size(j1)):
	if (j1[i] == 11): #pedra
		if (j2[i == 2]):#papel
			pont2 += 1
		elif(j2[i] == 33):
				tesoura
				pont1 += 1
	if (j1[i] == 22): #papel
		if (j2[i] == 22):#pedra
			pont1 += 1
		elif(j2[i] == 33):# tesoura
			pont2 += 1
	if(j1[i] == 33): #tesoura
		if (j2[i] == 11): #pedra
			pont2 += 1
		elif(j2[i] == 22): #papel
			pont1 += 1
		i += 1
		
print(size(j1))
if (pont1 > pont2):
	print("EUSAPIA")
if(pont1 < pont2):
	print("BARSANULFO")
IF(pont1 == pont2):
	print("EMPATE")
	 		



-- EXECUTION TIME:
0.161357
-- ERROR:
  File "/home/codebench/codes/1756/1576/main.py", line 33
    IF(pont1 == pont2):
                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 11:44:21) 
-- CODE:
from numpy import*
j1 = array(eval(input("p1 sequencia de jogadas na eusapia: ")))
j2 = array(eval(input("p2 seuquencia de jogadas de barsanulfo:")))

pont1 = 0
pont2 = 0

i = 0
while(i < size(j1)):
	if (j1[i] == 11): #pedra
		if (j2[i == 2]):#papel
			pont2 += 1
		elif(j2[i] == 33):
				tesoura
				pont1 += 1
	if (j1[i] == 22): #papel
		if (j2[i] == 22):#pedra
			pont1 += 1
		elif(j2[i] == 33):# tesoura
			pont2 += 1
	if(j1[i] == 33): #tesoura
		if (j2[i] == 11): #pedra
			pont2 += 1
		elif(j2[i] == 22): #papel
			pont1 += 1
		i += 1
		
print(size(j1))
if (pont1 > pont2):
	print("EUSAPIA")
if(pont1 < pont2):
	print("BARSANULFO")
IF(pont1 == pont2):
	print("EMPATE")
	 		



-- ERROR:
File "XXXX", line 33
    IF(pont1 == pont2):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 11:44:21) 
-- CODE:
from numpy import*
j1 = array(eval(input("p1 sequencia de jogadas na eusapia: ")))
j2 = array(eval(input("p2 seuquencia de jogadas de barsanulfo:")))

pont1 = 0
pont2 = 0

i = 0
while(i < size(j1)):
	if (j1[i] == 11): #pedra
		if (j2[i == 2]):#papel
			pont2 += 1
		elif(j2[i] == 33):
				tesoura
				pont1 += 1
	if (j1[i] == 22): #papel
		if (j2[i] == 22):#pedra
			pont1 += 1
		elif(j2[i] == 33):# tesoura
			pont2 += 1
	if(j1[i] == 33): #tesoura
		if (j2[i] == 11): #pedra
			pont2 += 1
		elif(j2[i] == 22): #papel
			pont1 += 1
		i += 1
		
print(size(j1))
if (pont1 > pont2):
	print("EUSAPIA")
if(pont1 < pont2):
	print("BARSANULFO")
IF(pont1 == pont2):
	print("EMPATE")
	 		



-- EXECUTION TIME:
0.306063
-- ERROR:
  File "/home/codebench/codes/1756/1576/main.py", line 33
    IF(pont1 == pont2):
                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 11:44:47) 
-- CODE:
from numpy import*
j1 = array(eval(input("p1 sequencia de jogadas na eusapia: ")))
j2 = array(eval(input("p2 seuquencia de jogadas de barsanulfo:")))

pont1 = 0
pont2 = 0

i = 0
while(i < size(j1)):
	if (j1[i] == 11): #pedra
		if (j2[i == 22]):#papel
			pont2 += 1
		elif(j2[i] == 33):
				tesoura
				pont1 += 1
	if (j1[i] == 22): #papel
		if (j2[i] == 22):#pedra
			pont1 += 1
		elif(j2[i] == 33):# tesoura
			pont2 += 1
	if(j1[i] == 33): #tesoura
		if (j2[i] == 11): #pedra
			pont2 += 1
		elif(j2[i] == 22): #papel
			pont1 += 1
		i += 1
		
print(size(j1))
if (pont1 > pont2):
	print("EUSAPIA")
if(pont1 < pont2):
	print("BARSANULFO")
IF(pont1 == pont2):
	print("EMPATE")
	 		



-- EXECUTION TIME:
0.15594
-- ERROR:
  File "/home/codebench/codes/1756/1576/main.py", line 33
    IF(pont1 == pont2):
                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 11:45:04) 
-- CODE:
from numpy import*
j1 = array(eval(input("p1 sequencia de jogadas na eusapia: ")))
j2 = array(eval(input("p2 seuquencia de jogadas de barsanulfo:")))

pont1 = 0
pont2 = 0

i = 0
while(i < size(j1)):
	if (j1[i] == 11): #pedra
		if (j2[i] == 22):#papel
			pont2 += 1
		elif(j2[i] == 33):
				tesoura
				pont1 += 1
	if (j1[i] == 22): #papel
		if (j2[i] == 22):#pedra
			pont1 += 1
		elif(j2[i] == 33):# tesoura
			pont2 += 1
	if(j1[i] == 33): #tesoura
		if (j2[i] == 11): #pedra
			pont2 += 1
		elif(j2[i] == 22): #papel
			pont1 += 1
		i += 1
		
print(size(j1))
if (pont1 > pont2):
	print("EUSAPIA")
if(pont1 < pont2):
	print("BARSANULFO")
IF(pont1 == pont2):
	print("EMPATE")
	 		



-- EXECUTION TIME:
0.310334
-- ERROR:
  File "/home/codebench/codes/1756/1576/main.py", line 33
    IF(pont1 == pont2):
                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 11:47:34) 
-- CODE:
from numpy import*
j1 = array(eval(input("p1 sequencia de jogadas na eusapia: ")))
j2 = array(eval(input("p2 seuquencia de jogadas de barsanulfo:")))

pont1 = 0
pont2 = 0

i = 0
while(i < size(j1)):
	if (j1[i] == 11): #pedra
		if (j2[i] == 22): #papel
			pont2 += 1
		elif(j2[i] == 33):
				tesoura
				pont1 += 1
	if (j1[i] == 22): #papel
		if (j2[i] == 22): #pedra
			pont1 += 1
		elif(j2[i] == 33): #tesoura
			pont2 += 1
	if(j1[i] == 33): #tesoura
		if (j2[i] == 11): #pedra
			pont2 += 1
		elif(j2[i] == 22): #papel
			pont1 += 1
	i += 1
		
print(size(j1))
if (pont1 > pont2):
	print("EUSAPIA")
if(pont1 < pont2):
	print("BARSANULFO")
IF(pont1 == pont2):
	print("EMPATE")
	 		



-- ERROR:
File "XXXX", line 33
    IF(pont1 == pont2):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 11:47:49) 
-- CODE:
from numpy import*
j1 = array(eval(input("p1 sequencia de jogadas na eusapia: ")))
j2 = array(eval(input("p2 seuquencia de jogadas de barsanulfo:")))

pont1 = 0
pont2 = 0

i = 0
while(i < size(j1)):
	if (j1[i] == 11): #pedra
		if (j2[i] == 22): #papel
			pont2 += 1
		elif(j2[i] == 33):
				tesoura
				pont1 += 1
	if (j1[i] == 22): #papel
		if (j2[i] == 22): #pedra
			pont1 += 1
		elif(j2[i] == 33): #tesoura
			pont2 += 1
	if(j1[i] == 33): #tesoura
		if (j2[i] == 11): #pedra
			pont2 += 1
		elif(j2[i] == 22): #papel
			pont1 += 1
	i += 1
		
print(size(j1))
if (pont1 > pont2):
	print("EUSAPIA")
if(pont1 < pont2):
	print("BARSANULFO")
IF(pont1 == pont2):
	print("EMPATE")
	 		



-- ERROR:
File "XXXX", line 33
    IF(pont1 == pont2):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 11:47:58) 
-- CODE:
from numpy import*
j1 = array(eval(input("p1 sequencia de jogadas na eusapia: ")))
j2 = array(eval(input("p2 seuquencia de jogadas de barsanulfo:")))

pont1 = 0
pont2 = 0

i = 0
while(i < size(j1)):
	if (j1[i] == 11): #pedra
		if (j2[i] == 22): #papel
			pont2 += 1
		elif(j2[i] == 33):
				tesoura
				pont1 += 1
	if (j1[i] == 22): #papel
		if (j2[i] == 22): #pedra
			pont1 += 1
		elif(j2[i] == 33): #tesoura
			pont2 += 1
	if(j1[i] == 33): #tesoura
		if (j2[i] == 11): #pedra
			pont2 += 1
		elif(j2[i] == 22): #papel
			pont1 += 1
	i += 1
		
print(size(j1))
if (pont1 > pont2):
	print("EUSAPIA")
if(pont1 < pont2):
	print("BARSANULFO")
if(pont1 == pont2):
	print("EMPATE")
	 		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 11:48:00) 
-- CODE:
from numpy import*
j1 = array(eval(input("p1 sequencia de jogadas na eusapia: ")))
j2 = array(eval(input("p2 seuquencia de jogadas de barsanulfo:")))

pont1 = 0
pont2 = 0

i = 0
while(i < size(j1)):
	if (j1[i] == 11): #pedra
		if (j2[i] == 22): #papel
			pont2 += 1
		elif(j2[i] == 33):
				tesoura
				pont1 += 1
	if (j1[i] == 22): #papel
		if (j2[i] == 22): #pedra
			pont1 += 1
		elif(j2[i] == 33): #tesoura
			pont2 += 1
	if(j1[i] == 33): #tesoura
		if (j2[i] == 11): #pedra
			pont2 += 1
		elif(j2[i] == 22): #papel
			pont1 += 1
	i += 1
		
print(size(j1))
if (pont1 > pont2):
	print("EUSAPIA")
if(pont1 < pont2):
	print("BARSANULFO")
if(pont1 == pont2):
	print("EMPATE")
	 		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 11:48:01) 
-- CODE:
from numpy import*
j1 = array(eval(input("p1 sequencia de jogadas na eusapia: ")))
j2 = array(eval(input("p2 seuquencia de jogadas de barsanulfo:")))

pont1 = 0
pont2 = 0

i = 0
while(i < size(j1)):
	if (j1[i] == 11): #pedra
		if (j2[i] == 22): #papel
			pont2 += 1
		elif(j2[i] == 33):
				tesoura
				pont1 += 1
	if (j1[i] == 22): #papel
		if (j2[i] == 22): #pedra
			pont1 += 1
		elif(j2[i] == 33): #tesoura
			pont2 += 1
	if(j1[i] == 33): #tesoura
		if (j2[i] == 11): #pedra
			pont2 += 1
		elif(j2[i] == 22): #papel
			pont1 += 1
	i += 1
		
print(size(j1))
if (pont1 > pont2):
	print("EUSAPIA")
if(pont1 < pont2):
	print("BARSANULFO")
if(pont1 == pont2):
	print("EMPATE")
	 		



-- EXECUTION TIME:
0.562448
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1576/main.py", line 14, in <module>
    tesoura
NameError: name 'tesoura' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 11:48:36) 
-- CODE:
from numpy import*
j1 = array(eval(input("p1 sequencia de jogadas na eusapia: ")))
j2 = array(eval(input("p2 seuquencia de jogadas de barsanulfo:")))

pont1 = 0
pont2 = 0

i = 0
while(i < size(j1)):
	if (j1[i] == 11): #pedra
		if (j2[i] == 22): #papel
			pont2 += 1
		elif(j2[i] == 33):
				tesoura
				pont1 += 1
	if (j1[i] == 22): #papel
		if (j2[i] == 22): #pedra
			pont1 += 1
		elif(j2[i] == 33): #tesoura
			pont2 += 1
	if(j1[i] == 33): #tesoura
		if (j2[i] == 11): #pedra
			pont2 += 1
		elif(j2[i] == 22): #papel
			pont1 += 1
	i += 1
		
print(size(j1))
if(pont1 > pont2):
	print("EUSAPIA")
if(pont1 < pont2):
	print("BARSANULFO")
if(pont1 == pont2):
	print("EMPATE")
	 		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 11:49:56) 
-- CODE:
from numpy import*
j1 = array(eval(input("p1 sequencia de jogadas na eusapia = ")))
j2 = array(eval(input("p2 seuquencia de jogadas de barsanulfo = ")))

pont1 = 0
pont2 = 0

i = 0
while(i < size(j1)):
	if (j1[i] == 11): #pedra
		if (j2[i] == 22): #papel
			pont2 += 1
		elif(j2[i] == 33):
				tesoura
				pont1 += 1
	if (j1[i] == 22): #papel
		if (j2[i] == 22): #pedra
			pont1 += 1
		elif(j2[i] == 33): #tesoura
			pont2 += 1
	if(j1[i] == 33): #tesoura
		if (j2[i] == 11): #pedra
			pont2 += 1
		elif(j2[i] == 22): #papel
			pont1 += 1
	i += 1
		
print(size(j1))
if(pont1 > pont2):
	print("EUSAPIA")
if(pont1 < pont2):
	print("BARSANULFO")
if(pont1 == pont2):
	print("EMPATE")
	 		



-- EXECUTION TIME:
0.514055
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1576/main.py", line 14, in <module>
    tesoura
NameError: name 'tesoura' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 11:49:59) 
-- CODE:
from numpy import*
j1 = array(eval(input("p1 sequencia de jogadas na eusapia = ")))
j2 = array(eval(input("p2 seuquencia de jogadas de barsanulfo = ")))

pont1 = 0
pont2 = 0

i = 0
while(i < size(j1)):
	if (j1[i] == 11): #pedra
		if (j2[i] == 22): #papel
			pont2 += 1
		elif(j2[i] == 33):
				tesoura
				pont1 += 1
	if (j1[i] == 22): #papel
		if (j2[i] == 22): #pedra
			pont1 += 1
		elif(j2[i] == 33): #tesoura
			pont2 += 1
	if(j1[i] == 33): #tesoura
		if (j2[i] == 11): #pedra
			pont2 += 1
		elif(j2[i] == 22): #papel
			pont1 += 1
	i += 1
		
print(size(j1))
if(pont1 > pont2):
	print("EUSAPIA")
if(pont1 < pont2):
	print("BARSANULFO")
if(pont1 == pont2):
	print("EMPATE")
	 		



-- EXECUTION TIME:
0.626108
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1576/main.py", line 14, in <module>
    tesoura
NameError: name 'tesoura' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 11:50:00) 
-- CODE:
from numpy import*
j1 = array(eval(input("p1 sequencia de jogadas na eusapia = ")))
j2 = array(eval(input("p2 seuquencia de jogadas de barsanulfo = ")))

pont1 = 0
pont2 = 0

i = 0
while(i < size(j1)):
	if (j1[i] == 11): #pedra
		if (j2[i] == 22): #papel
			pont2 += 1
		elif(j2[i] == 33):
				tesoura
				pont1 += 1
	if (j1[i] == 22): #papel
		if (j2[i] == 22): #pedra
			pont1 += 1
		elif(j2[i] == 33): #tesoura
			pont2 += 1
	if(j1[i] == 33): #tesoura
		if (j2[i] == 11): #pedra
			pont2 += 1
		elif(j2[i] == 22): #papel
			pont1 += 1
	i += 1
		
print(size(j1))
if(pont1 > pont2):
	print("EUSAPIA")
if(pont1 < pont2):
	print("BARSANULFO")
if(pont1 == pont2):
	print("EMPATE")
	 		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 11:50:59) 
-- CODE:
from numpy import*
j1 = array(eval(input("P1. Sequencia de Jogadas na Eusapia = ")))
j2 = array(eval(input("p2 seuquencia de jogadas de barsanulfo = ")))

pont1 = 0
pont2 = 0

i = 0
while(i < size(j1)):
	if (j1[i] == 11): #pedra
		if (j2[i] == 22): #papel
			pont2 += 1
		elif(j2[i] == 33):
				tesoura
				pont1 += 1
	if (j1[i] == 22): #papel
		if (j2[i] == 22): #pedra
			pont1 += 1
		elif(j2[i] == 33): #tesoura
			pont2 += 1
	if(j1[i] == 33): #tesoura
		if (j2[i] == 11): #pedra
			pont2 += 1
		elif(j2[i] == 22): #papel
			pont1 += 1
	i += 1
		
print(size(j1))
if(pont1 > pont2):
	print("EUSAPIA")
if(pont1 < pont2):
	print("BARSANULFO")
if(pont1 == pont2):
	print("EMPATE")
	 		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 11:50:59) 
-- CODE:
from numpy import*
j1 = array(eval(input("P1. Sequencia de Jogadas na Eusapia = ")))
j2 = array(eval(input("p2 seuquencia de jogadas de barsanulfo = ")))

pont1 = 0
pont2 = 0

i = 0
while(i < size(j1)):
	if (j1[i] == 11): #pedra
		if (j2[i] == 22): #papel
			pont2 += 1
		elif(j2[i] == 33):
				tesoura
				pont1 += 1
	if (j1[i] == 22): #papel
		if (j2[i] == 22): #pedra
			pont1 += 1
		elif(j2[i] == 33): #tesoura
			pont2 += 1
	if(j1[i] == 33): #tesoura
		if (j2[i] == 11): #pedra
			pont2 += 1
		elif(j2[i] == 22): #papel
			pont1 += 1
	i += 1
		
print(size(j1))
if(pont1 > pont2):
	print("EUSAPIA")
if(pont1 < pont2):
	print("BARSANULFO")
if(pont1 == pont2):
	print("EMPATE")
	 		



-- EXECUTION TIME:
0.486834
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1576/main.py", line 14, in <module>
    tesoura
NameError: name 'tesoura' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 11:53:52) 
-- CODE:
from numpy import*
from numpy import *
vet1 = array(eval(input("Digite um vetor para Eusapio: ")))
vet2 = array(eval(input("Digite um vetor para Barsanulfo: ")))
pont1 = 0
pont2 = 0

i = 0

while (i < size(vet1)):
	if (vet1[i] == 11): #pedra
		if (vet2[i] == 22):#papel
			pont2 += 1
		elif (vet2[i] == 33):#tesoura
			pont1 += 1
	if (vet1[i] == 22):
		if (vet2[i] == 11):
			pont1 += 1
		elif (vet2[i] == 33):
			pont2 += 1
	if (vet1[i] == 33):
		if (vet2[i] == 11):
			pont2 += 1
		elif (vet2[i] == 22):
			pont1 += 1
	i += 1
	
print(size(vet1))
if (pont1 > pont2):
	print("EUSAPIA")
if (pont1 < pont2):
	print("BARSANULFO")
if (pont1 == pont2):
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 11:53:55) 
-- CODE:
from numpy import*
from numpy import *
vet1 = array(eval(input("Digite um vetor para Eusapio: ")))
vet2 = array(eval(input("Digite um vetor para Barsanulfo: ")))
pont1 = 0
pont2 = 0

i = 0

while (i < size(vet1)):
	if (vet1[i] == 11): #pedra
		if (vet2[i] == 22):#papel
			pont2 += 1
		elif (vet2[i] == 33):#tesoura
			pont1 += 1
	if (vet1[i] == 22):
		if (vet2[i] == 11):
			pont1 += 1
		elif (vet2[i] == 33):
			pont2 += 1
	if (vet1[i] == 33):
		if (vet2[i] == 11):
			pont2 += 1
		elif (vet2[i] == 22):
			pont1 += 1
	i += 1
	
print(size(vet1))
if (pont1 > pont2):
	print("EUSAPIA")
if (pont1 < pont2):
	print("BARSANULFO")
if (pont1 == pont2):
	print("EMPATE")
-- EXECUTION TIME:
0.464813
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
